[FLINK-1218] Replace new Integer with Integer.valueOf in tests
This closes #183.