@@ -52,11 +52,11 @@ public class FloatComparatorTest extends ComparatorTestBase<Float> {
 			rndFloat += 3;
 		}
 		return new Float[]{
-			new Float(-rndFloat),
-			new Float(-1.0F),
-			new Float(0.0F),
-			new Float(2.0F),
-			new Float(rndFloat),
-			new Float(Float.MAX_VALUE)};
+			Float.valueOf(-rndFloat),
+			Float.valueOf(-1.0F),
+			Float.valueOf(0.0F),
+			Float.valueOf(2.0F),
+			Float.valueOf(rndFloat),
+			Float.valueOf(Float.MAX_VALUE)};
 	}
 }
