@@ -301,10 +301,10 @@ public class HashTableITCase {
 			
 			Long contained = map.get(key);
 			if (contained == null) {
-				contained = new Long(numBuildValues);
+				contained = Long.valueOf(numBuildValues);
 			}
 			else {
-				contained = new Long(contained.longValue() + (numBuildValues));
+				contained = Long.valueOf(contained.longValue() + (numBuildValues));
 			}
 			
 			map.put(key, contained);
@@ -408,10 +408,10 @@ public class HashTableITCase {
 			
 			Long contained = map.get(key);
 			if (contained == null) {
-				contained = new Long(numBuildValues);
+				contained = Long.valueOf(numBuildValues);
 			}
 			else {
-				contained = new Long(contained.longValue() + numBuildValues);
+				contained = Long.valueOf(contained.longValue() + numBuildValues);
 			}
 			
 			map.put(key, contained);
@@ -521,10 +521,10 @@ public class HashTableITCase {
 			
 			Long contained = map.get(key);
 			if (contained == null) {
-				contained = new Long(numBuildValues);
+				contained = Long.valueOf(numBuildValues);
 			}
 			else {
-				contained = new Long(contained.longValue() + numBuildValues);
+				contained = Long.valueOf(contained.longValue() + numBuildValues);
 			}
 			
 			map.put(key, contained);
@@ -901,10 +901,10 @@ public class HashTableITCase {
 			
 			Long contained = map.get(key);
 			if (contained == null) {
-				contained = new Long(numBuildValues);
+				contained = Long.valueOf(numBuildValues);
 			}
 			else {
-				contained = new Long(contained.longValue() + (numBuildValues));
+				contained = Long.valueOf(contained.longValue() + (numBuildValues));
 			}
 			
 			map.put(key, contained);
@@ -1011,10 +1011,10 @@ public class HashTableITCase {
 			
 			Long contained = map.get(key);
 			if (contained == null) {
-				contained = new Long(numBuildValues);
+				contained = Long.valueOf(numBuildValues);
 			}
 			else {
-				contained = new Long(contained.longValue() + numBuildValues);
+				contained = Long.valueOf(contained.longValue() + numBuildValues);
 			}
 			
 			map.put(key, contained);
@@ -1123,10 +1123,10 @@ public class HashTableITCase {
 			
 			Long contained = map.get(key);
 			if (contained == null) {
-				contained = new Long(numBuildValues);
+				contained = Long.valueOf(numBuildValues);
 			}
 			else {
-				contained = new Long(contained.longValue() + numBuildValues);
+				contained = Long.valueOf(contained.longValue() + numBuildValues);
 			}
 			
 			map.put(key, contained);
